Issue table demo is working

--- a/jmvc/seccubus/issue/table/table.html
+++ b/jmvc/seccubus/issue/table/table.html
@@ -23,7 +23,7 @@ limitations under the License.
             body {font-family: verdana}
             .collapsed { background: url("img/expand.png") no-repeat scroll right center ; padding-right: 20px;}
             .expanded { background: url("img/sort_desc.png") no-repeat scroll right center ; padding-right: 20px;}
-            .findings_issue { padding: 5px;}
+            .findings_issue { margin: 5px;}
             .finding_status_4 { text-decoration: line-through;}
             .finding_status_5 { text-decoration: line-through;}
             .finding_status_6 { text-decoration: line-through;}
