--- a/jmvc/seccubus/issue/table/table.html
+++ b/jmvc/seccubus/issue/table/table.html
@@ -34,6 +34,7 @@ limitations under the License.
 	    <h1>Seccubus.Issue.Table Demo</h1>
 		<div id='issues'></div><br>
 		<a href='javascript://' id='select' workspace='100'>Select workspace 100</a><br>
+		<a href='javascript://' id='finding' finding='3'>Set finding=3</a><br>
 		<script type='text/javascript' 
                 src='../../../steal/steal.js'>
         </script>
@@ -50,6 +51,13 @@ limitations under the License.
 					ws = $( this ).attr("workspace");
 					$('#issues').seccubus_issue_table({
 						workspace : $(this).attr("workspace")
+					});
+				})
+
+				$('#finding').click(function(el, ev) {
+					ws = $( this ).attr("workspace");
+					$('#issues').seccubus_issue_table({
+						finding : $(this).attr("finding")
 					});
 				})
 			})
