More consistent show behaviour

--- a/jmvc/seccubus/issue/table/table.html
+++ b/jmvc/seccubus/issue/table/table.html
@@ -28,6 +28,8 @@ limitations under the License.
             .finding_status_5 { text-decoration: line-through;}
             .finding_status_6 { text-decoration: line-through;}
             .finding_status_99 { text-decoration: line-through;}
+            .issueOpen {}
+            .issueClosed {}
         </style>
 	</head>
 	<body>
