Tied issue edit and create into issue table

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -258,6 +258,18 @@ limitations under the License.
       </table>
     </div>
    
+    <div id="createIssueDialog" class='hidden wide'>
+      <form id="createIssue">
+        Room for modal createIssue
+      </form>
+    </div>
+   
+    <div id="editIssueDialog" class='hidden wide'>
+      <form id="editIssue">
+        Room for modal editIssue
+      </form>
+    </div>
+   
     <div id="editAssetDialog" class='hidden'>
       <h1>Update your Asset</h1>
       <form id="editAsset">
