--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -268,6 +268,7 @@ limitations under the License.
       <form id="editIssue">
         Room for modal editIssue
       </form>
+      <table id='issueFindingTable'></table>
     </div>
    
     <div id="editAssetDialog" class='hidden'>
