Beatification of issue tables

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -125,9 +125,9 @@ limitations under the License.
       </div>
       <div class='main'>
         <br>
-        <table id='issue_table'>
-          <tr><td>Issue table will go here</td></tr>
-        </table>
+        <div id='issue_table'>
+          Issue table will go here...
+        </div>
       </div>
     </div>
 
