Tied bulk link edit into main gui

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -263,6 +263,12 @@ limitations under the License.
         Room for modal createIssue
       </form>
     </div>
+
+    <div id="createIssuelinkDialog" class='hidden wide'>
+      <form id="createIssuelink">
+        Room for modal createIssuelink
+      </form>
+    </div>
    
     <div id="editIssueDialog" class='hidden wide'>
       <form id="editIssue">
