--- a/scanners/testssl/help.html
+++ b/scanners/testssl/help.html
@@ -67,12 +67,12 @@ This scanner takes the following parameters:
 	<li>-s, --pfs, --fs, --nsa
 			<br>checks (perfect) forward secrecy settings.
 	<li>-4, --rc4, --appelbaum
-			<br>hich RC4 ciphers are being offered?. 
+			<br>Which RC4 ciphers are being offered?. 
 </ul>
 <p>
 Subsitutions:
 <ul>
-	<li>@HOSTS is substituted with the path of a file containig the hosts field
+	<li>@HOSTS is substituted with the path of a file containing the hosts field
 	<li>$WORSKPACE is substituted with the workspace name
 	<li>$SCAN is substituted with the scan name
 	<li>$PASSWORD is substituted with the value in the password field
