API now limits the number of results to 200 by default

--- a/jmvc/seccubus/finding/table/table.html
+++ b/jmvc/seccubus/finding/table/table.html
@@ -91,7 +91,7 @@ limitations under the License.
 					$('#findings').seccubus_finding_table({
 						workspace	: gui_state.attr("workspace"),
 						scans		: gui_state.attr("scans"),
-						status		: gui_state.attr("status"),
+						status		: gui_state.attr("status")
 					});
 				};
 			})
