--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
     <div class="callout-container">
         <div class="callout">
             <h2>Seccubus</h2>
-            <h3 class="subheader">Seccubus automates vulnerability scanning with: 
+            <h3 class="subheader">Seccubus automates vulnerability scanning with:
 	    	Nessus, OpenVAS, NMap, SSLyze, Medusa, SkipFish, OWASP ZAP and SSLlabs
 	    </h3>
             <br/>
@@ -16,26 +16,26 @@ layout: default
 <section class="main-content">
     <div class="why">
         <h3>Why Seccubus?</h3>
-        <p>Anyone who has ever used a vulnerability scanner like Nessus or OpenVAS will be 
-	familiar with one of their biggest drawbacks. They a very valuable tools, but 
-	unfortunately they are also very noisy. The time needed to report on the findings of 
-	a scan is often two or three times the time needed to do the actual scan. Seccubus was 
+        <p>Anyone who has ever used a vulnerability scanner like Nessus or OpenVAS will be
+	familiar with one of their biggest drawbacks. They a very valuable tools, but
+	unfortunately they are also very noisy. The time needed to report on the findings of
+	a scan is often two or three times the time needed to do the actual scan. Seccubus was
 	created to more effectively analyze the results of regular vulnerability scans. It was
 	designed with defenders in mind who have to scan the same infrastructure regularly.</p>
     </div>
     <div class="how">
         <h3>How does it work?</h3>
-        <p>Seccubus runs vulnerability scans at regular intervals and compares the findings of 
-	the last scan with the findings of the previous scan. The delta of this scan is 
-	presented in a web GUI where findings can be easily marked as either real findings or 
-	non-issues. Non issues get ignored until they change. This causes a dramatic 
+        <p>Seccubus runs vulnerability scans at regular intervals and compares the findings of
+	the last scan with the findings of the previous scan. The delta of this scan is
+	presented in a web GUI where findings can be easily marked as either real findings or
+	non-issues. Non issues get ignored until they change. This causes a dramatic
 	reduction in analysis time.
-	
-	Before the results of a vulnerability scan are imported into Seccubus they are first 
+
+	Before the results of a vulnerability scan are imported into Seccubus they are first
 	converted to the Intermediate Vulnerability Information Language (IVIL) format to make
 	sure Seccubus can work with many different scanners</p>
     </div>
-    <div> class="what">
+    <div class="what">
     	<h3>What scanners are supported?</h3>
     	<p>THe following scanners are supported:
     		<ul>
@@ -55,7 +55,7 @@ layout: default
         <h2>News</h2>
 		<ul>
             {% for post in site.posts %}
-				{% if forloop.index <= 10 %} 
+				{% if forloop.index <= 10 %}
 		            <li>
 			    	    <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
 				    </li>
