--- a/scanners/SSLlabs/help.html
+++ b/scanners/SSLlabs/help.html
@@ -15,8 +15,11 @@ limitations under the License.
 -->
 This scanner takes the following parameters:
 <ul>
-	<li>--hosts
-		<br>- The file containing the 'hosts' to scan
+	<li>
+		--hosts @HOSTS
+		<br>Specification of hosts to scan
+	<li>--gradeonly
+		<br>Only process the findings that give a grade
 	<li>--api (-a)
 		<br>- URL of the ssllabs API, defaults to
                     https://api.ssllabs.com/api/v2/
