--- a/jmvc/seccubus/scan/select/select.html
+++ b/jmvc/seccubus/scan/select/select.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2013 Frank Breedijk
+Copyright 2017 Frank Breedijk
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -30,7 +30,9 @@ limitations under the License.
 		<a href='javascript://' ws=2 class='setWorkspace'>2</a>
 		<a href='javascript://' ws=3 class='setWorkspace'>3</a>
 		<a href='javascript://' ws=4 class='setWorkspace'>4</a>
-		<a href='javascript://' ws=5 class='setWorkspace'>5</a><br>
+		<a href='javascript://' ws=5 class='setWorkspace'>5</a>
+		<a href='javascript://' ws=100 class='setWorkspace'>100</a>
+		<br>
 
 		Create scan in workspace: 
 		<a href='javascript://' ws=1 class='createScan'>1</a>
@@ -45,7 +47,7 @@ limitations under the License.
         </script>
 		<script type='text/javascript'>
 		steal('seccubus/scan/select',
-			'seccubus/fixtures',
+			//'seccubus/fixtures',
 			function(){
 				
 				$('#scans').seccubus_scan_select();
