--- a/jmvc/seccubus/workspace/create/create.html
+++ b/jmvc/seccubus/workspace/create/create.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2013 Frank Breedijk
+Copyright 2017 Frank Breedijk
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -32,7 +32,7 @@ limitations under the License.
         </script>
 		<script type='text/javascript'>
 			steal(	'seccubus/workspace/create',
-				'seccubus/fixtures',
+			//	'seccubus/fixtures',
 			function(){
 				
 				$('#create').seccubus_workspace_create();
