--- a/jmvc/seccubus/workspace/edit/edit.html
+++ b/jmvc/seccubus/workspace/edit/edit.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2013 Frank Breedijk
+Copyright 2017 Frank Breedijk
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -35,7 +35,7 @@ limitations under the License.
 		<script type='text/javascript'>
 			steal(	'seccubus/workspace/edit',
 				'seccubus/workspace/select',
-				'seccubus/fixtures',
+			//	'seccubus/fixtures',
 			function(){
 				$('#select').seccubus_workspace_select();
 				$('#select').change( function() {
