--- a/jmvc/seccubus/workspace/select/select.html
+++ b/jmvc/seccubus/workspace/select/select.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2013 Frank Breedijk
+Copyright 2017 Frank Breedijk
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -34,7 +34,7 @@ limitations under the License.
 			steal(	
 				'seccubus/workspace/select',
 				'seccubus/seccubus.css',
-				'seccubus/fixtures',
+			//	'seccubus/fixtures',
 				function(){
 				
 				$('#workspaces').seccubus_workspace_select();
