--- a/jmvc/seccubus/history/table/table.html
+++ b/jmvc/seccubus/history/table/table.html
@@ -49,7 +49,7 @@ limitations under the License.
 		<form id='edit_finding'>Form will go here</form>
 		<table id='history_table'><tr><td>History will go here</td></tr></table>
 		<table id='findings' border=1></table>
-		<script type='text/javascript' 
+		<script type='text/javascript'
                 src='../../../steal/steal.js'>
         </script>
 		<script type='text/javascript'>
@@ -57,7 +57,7 @@ limitations under the License.
 				'seccubus/finding/edit',
 				'seccubus/workspace/select',
 				'seccubus/scan/select',
-				'seccubus/fixtures',
+				//'seccubus/fixtures',
 			function(){
 				var gui_state=new Seccubus.GuiState({
 					workspace       : -1
