Front end is working again via Docker. You can log into the GUI now

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -28,7 +28,7 @@ limitations under the License.
           <h1><a href="#">Seccubus</a></h1>
           <h2>Automated vulnerability scanning and reporting</h2>
           <nav id="top-nav">
-            <a id="logout">Logout</a>
+            <div id='session_info'></div>
             <!-- Ticket 67 - Links in top right of UI do nothing -->
             <!-- <a href="#">Settings</a> <span> | </span> <ahref="#">Help</a> -->
           </nav>
