Fixes #480 - Editing/showing notifications broken This bug was introduced when rewrting the backend

--- a/jmvc/seccubus/scan/edit/edit.html
+++ b/jmvc/seccubus/scan/edit/edit.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2013 Frank Breedijk
+Copyright 2012-2017 Frank Breedijk
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -31,7 +31,7 @@ limitations under the License.
 		<br>
 		<select id='scan' size=5></select>
 		<form id='edit'></form>
-		<script type='text/javascript' 
+		<script type='text/javascript'
                 src='../../../steal/steal.js'>
         </script>
 		<script type='text/javascript'>
@@ -40,7 +40,7 @@ limitations under the License.
 				'seccubus/scan/select',
 				//'seccubus/fixtures',
 			function(){
-				
+
 				$("#workspace").seccubus_workspace_select();
 				$("#workspace").change( function() {
 					$("#scan").seccubus_scan_select({
