Fexies #492 - Finding history wasn't showing in the GUI

--- a/jmvc/seccubus/history/table/table.html
+++ b/jmvc/seccubus/history/table/table.html
@@ -110,7 +110,8 @@ limitations under the License.
 					if(f.length > 0) {
 						$("#edit_finding").seccubus_finding_edit({
 							findings	: f,
-							workspace	: gui_state.attr("workspace")
+							workspace	: gui_state.attr("workspace"),
+                            history     : '#history_table'
 						});
 					}
 				});
