--- a/jmvc/seccubus/config_item/list/list.html
+++ b/jmvc/seccubus/config_item/list/list.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2013 Frank Breedijk
+Copyright 2011-2017 Frank Breedijk
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -45,7 +45,7 @@ limitations under the License.
 	    <h1>Seccubus.ConfigItem.List Demo</h1>
 		<ul id='config_items'></ul>
 		<a href='javascript://' id='create'>Create ConfigItem</a>
-		<script type='text/javascript' 
+		<script type='text/javascript'
                 src='../../../steal/steal.js'>
         </script>
 		<script type='text/javascript'>
@@ -53,9 +53,9 @@ limitations under the License.
 			steal('seccubus/config_item/list',
 			//	'seccubus/fixtures',
 			function(){
-				
+
 				$('#config_items').seccubus_config_item_list();
-				
+
 				$('#create').click(function(){
 					new Seccubus.Models.ConfigItem({
 						name: "Grilled Cheese",
