--- a/scanners/Tenable.io/help.html
+++ b/scanners/Tenable.io/help.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2017-2017 Frank Breedijk
+Copyright 2017-2018 Frank Breedijk
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -17,15 +17,15 @@ limitations under the License.
 This scanner takes the following parameters:
 <ul>
     <li>--policy          <br>- Name of policy or template to use for this scan
-    <li>--hosts           <br>- Specification of hosts to scan. Follows the tenable.io rules for specifying hosts, or path to a file containing such specification
-    <li>--accesskey       <br>- API access key to log into tennable.io. You can generate this key via Settings->My Account->API-Leys (https://cloud.tenable.com/app.html#/settings/my-account/api-keys)
-    <li>--secretkey       <br>- API secret key to log into tennable.io. (See accesskey)
+    <li>--hosts           <br>- Specification of hosts to scan. Follows the Tenable.io rules for specifying hosts, or path to a file containing such specification
+    <li>--accesskey       <br>- API access key to log into Tenable.io. You can generate this key via Settings->My Account->API-Leys (https://cloud.tenable.com/app.html#/settings/my-account/api-keys)
+    <li>--secretkey       <br>- API secret key to log into Tenable.io. (See accesskey)
     <li>--scanner         <br>- Name of the scanner to use for this scan.
-    <li>--api             <br>- Can be used to overwrite the url of the tennable.io API
+    <li>--api             <br>- Can be used to overwrite the url of the Tenable.io API
     <li>--export          <br>- Export the scan in these formats (specify more then once for more formats), currently supported formats are: nessus, html, pdf, csv, db.
-    <li>--nosslcheck      <br>- Don't validate tenable.io' TLS certificate Common Name (default: true when port is 8834 false when port is 443)
+    <li>--nosslcheck      <br>- Don't validate Tenable.io' TLS certificate Common Name (default: true when port is 8834 false when port is 443)
     <li>--retries         <br>- How many times should rest calls be retried before aborting the scan (default=3)
-    <li>--sleep           <br>- Seconds to sleep between polls of the tennable.io engine (default=30)
+    <li>--sleep           <br>- Seconds to sleep between polls of the Tenable.io engine (default=30)
 </ul>
 You must use --hosts @HOSTS
 <p>
