--- a/scanners/OpenVAS6/help.html
+++ b/scanners/OpenVAS6/help.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2016 Fabien Guillaume, Frank Breedijk, Bernd Leinfelder
+Copyright 2016-2019 Fabien Guillaume, Frank Breedijk, Bernd Leinfelder
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
