Moved online version check to main website

--- a/jmvc/seccubus/up_to_date/list/list.html
+++ b/jmvc/seccubus/up_to_date/list/list.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2013 Frank Breedijk
+Copyright 2011-2019 Frank Breedijk
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -38,15 +38,15 @@ limitations under the License.
 	<body>
 	    <h1>Seccubus.UpToDate.List Demo</h1>
 		<ul id='up_to_dates'></ul>
-		<script type='text/javascript' 
+		<script type='text/javascript'
                 src='../../../steal/steal.js'>
         </script>
 		<script type='text/javascript'>
 			//steal('seccubus/up_to_date/list','seccubus/fixtures/fixtures.js',function(){
 			steal('seccubus/up_to_date/list',function(){
-				
+
 				$('#up_to_dates').seccubus_up_to_date_list();
-				
+
 			})
 		</script>
 	</body>
